name:                jsaddle-wasm
version:             0.1.0.0
synopsis:            JSaddle interface for WebGHC
-- description:
homepage:            https://github.com/WebGHC/jsaddle-wasm
license:             BSD3
license-file:        LICENSE
author:              Divam
maintainer:          dfordivam@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:   Language.Javascript.JSaddle.Wasm
  c-sources:         cbits/jsaddle-wasm-interface.c
  include-dirs:      cbits/include
  build-depends:       base >=4.11 && <5
                       , bytestring
                       , binary
                       , jsaddle
                       , aeson
  hs-source-dirs:      src
  default-language:    Haskell2010
  ld-options: -Wl,--export,jsaddleBufferMalloc -Wl,--export,jsaddleProcessResult

-- TODO: figure out why this is not compiling
-- it gives linker error for the above exported symbols
--
-- executable jsaddle-wasm-test
--   main-is:             Test.hs
--   hs-source-dirs:      test
--   -- other-modules:
--   -- other-extensions:
--   ghc-options:      
--   build-depends:       base >=4.10 && <5
--                        , bytestring
--                        , jsaddle
--                        , lens
--                        , text
--                        , jsaddle-wasm
--   -- hs-source-dirs:
--   default-language:    Haskell2010
